test_suite/tests/ui/enum-representation/untagged-and-content.stderr
error: untagged enum cannot have #[serde(content = "...")]
 --> $DIR/untagged-and-content.rs:5:9
  |
5 | #[serde(untagged)]
  |         ^^^^^^^^

error: untagged enum cannot have #[serde(content = "...")]
 --> $DIR/untagged-and-content.rs:6:9
  |
6 | #[serde(content = "c")]
  |         ^^^^^^^

error: aborting due to 2 previous errors

